--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test value="shoppingList"> clothes</li>
+		<li data-ns-test value="shoppingList"> gadgets</li>
+		<li data-ns-test value="shoppingList"> food</li>
+	</ol>
+	<ul>
+		<li data-ns-test value="holidayList">kedarnath</li>
+		<li data-ns-test value="holidayList">bali</li>
+		<li data-ns-test value="holidayList">maldives</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
