--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-test value="shoppingList">Clothes</li>
-		<li data-ns-test value="shoppingList">Gadgets</li>
-		<li data-ns-test value="shoppingList">Food</li>
+		<li data-ns-test ="shoppingList">Clothes</li>
+		<li data-ns-test ="shoppingList">Gadgets</li>
+		<li data-ns-test ="shoppingList">Food</li>
 	</ol>
 	
 	<ul>
-		<li data-ns-test value="holidayList">Kedarnath</li>
-		<li data-ns-test value="holidayList">Bali</li>
-		<li data-ns-test value="holidayList">Maldives</li>
+		<li data-ns-test ="holidayList">Kedarnath</li>
+		<li data-ns-test ="holidayList">Bali</li>
+		<li data-ns-test ="holidayList">Maldives</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
